--- a/index.html
+++ b/index.html
@@ -24,5 +24,27 @@
         <div class="img-content">this is a placeholder for an image</div>
     </div>
     
+    <div class="second-section">
+        <h3>Some random information</h3>
+        <div class="container">
+            <div class="first-card card">
+                <div></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="second-card card">
+                <div></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="third-card card">
+                <div></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="fourth-card card">
+                <div></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
