Fix issues on third section and fourth section done That's it

--- a/index.html
+++ b/index.html
@@ -25,25 +25,30 @@
     </div>
     
     <div class="second-section">
-        <h3>Some random information</h3>
+        <h3>Some random information.</h3>
         <div class="container">
-            <div class="first-card card">
-                <div></div>
-                <p>This is some subtext under an illustration or image</p>
+            <div class="first-card">
+                <div class="card"></div>
+                <p>this is some subtext under an illutrastion or image</p>
             </div>
-            <div class="second-card card">
-                <div></div>
-                <p>This is some subtext under an illustration or image</p>
+            <div class="second-card">
+                <div class="card"></div>
+                <p>this is some subtext under an illutrastion or image</p>
             </div>
-            <div class="third-card card">
-                <div></div>
-                <p>This is some subtext under an illustration or image</p>
+            <div class="third-card">
+                <div class="card"></div>
+                <p>this is some subtext under an illutrastion or image</p>
             </div>
-            <div class="fourth-card card">
-                <div></div>
-                <p>This is some subtext under an illustration or image</p>
+            <div class="fourth-card">
+                <div class="card"></div>
+                <p>this is some subtext under an illutrastion or image</p>
             </div>
         </div>
+    </div>
+
+    <div class="third-section">
+        <p class="italic-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+        <p class="quote">- Thor, God of Thunder</p>
     </div>
 
 </body>
