Section fourth and footer complete It's remains only details and refactoring

--- a/index.html
+++ b/index.html
@@ -51,5 +51,19 @@
         <p class="quote">- Thor, God of Thunder</p>
     </div>
 
+    <div class="fourth-section">
+        <div class="square">
+            <div class="text">
+                <p class="bold-text">Call to action! It's time!</p>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="second-button">Sign up</button>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>Copyright The Odin Project 2024</p>
+    </div>
+
 </body>
 </html>
