--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <li><a href="#">header link three</a></li>
         </ul>
     </div>
-    <div class="content">
+    <div class="first-section">
         <div class="text-content">
             <h2>This website is awesome</h2>
             <p>This website has some subtext that goes here under the main title. It's a smaller font and color is lower contrast</p>
             <button>Sign up</button>
         </div>
-        <div class="img-content">this is a placeholder for an image</div>
+        <div class="img-content"><p>this is a placeholder for an image</p></div>
     </div>
     
     <div class="second-section">
